--- a/sources/NotoSansDeseret-Regular.ufo/lib.plist
+++ b/sources/NotoSansDeseret-Regular.ufo/lib.plist
@@ -2,42 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
-    <key>com.schriftgestaltung.appVersion</key>
-    <string>961</string>
-    <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
+    <key>com.schriftgestaltung.DisplayStrings</key>
     <array>
-      <string>/uni10447</string>
+      <string>𐐂𐐚𐐪𐑂</string>
     </array>
-    <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
+    <key>com.schriftgestaltung.appVersion</key>
+    <string>3316</string>
+    <key>com.schriftgestaltung.disablesAutomaticAlignment</key>
     <true/>
-    <key>com.schriftgestaltung.customParameter.GSFont.useNiceNames</key>
-    <integer>0</integer>
-    <key>com.schriftgestaltung.customParameter.GSFontMaster.customValue</key>
-    <integer>0</integer>
-    <key>com.schriftgestaltung.customParameter.GSFontMaster.customValue1</key>
-    <integer>0</integer>
-    <key>com.schriftgestaltung.customParameter.GSFontMaster.customValue2</key>
-    <integer>0</integer>
-    <key>com.schriftgestaltung.customParameter.GSFontMaster.customValue3</key>
-    <integer>0</integer>
-    <key>com.schriftgestaltung.customParameter.GSFontMaster.iconName</key>
-    <string></string>
-    <key>com.schriftgestaltung.customParameter.GSFontMaster.weightValue</key>
-    <integer>100</integer>
-    <key>com.schriftgestaltung.customParameter.GSFontMaster.widthValue</key>
-    <integer>100</integer>
-    <key>com.schriftgestaltung.fontMasterOrder</key>
-    <integer>0</integer>
-    <key>com.schriftgestaltung.keyboardIncrement</key>
-    <integer>1</integer>
-    <key>com.schriftgestaltung.weight</key>
-    <string>Regular</string>
-    <key>com.schriftgestaltung.weightValue</key>
-    <integer>100</integer>
-    <key>com.schriftgestaltung.width</key>
-    <string>Regular</string>
-    <key>com.schriftgestaltung.widthValue</key>
-    <integer>100</integer>
+    <key>com.schriftgestaltung.fontMasterID</key>
+    <string>master01</string>
+    <key>com.schriftgestaltung.formatVersion</key>
+    <integer>3</integer>
+    <key>com.schriftgestaltung.useGlyphOrder</key>
+    <true/>
+    <key>com.schriftgestaltung.useNiceNames</key>
+    <false/>
     <key>public.glyphOrder</key>
     <array>
       <string>.notdef</string>
@@ -126,5 +106,168 @@
       <string>uni1044E</string>
       <string>uni1044F</string>
     </array>
+    <key>public.postscriptNames</key>
+    <dict>
+      <key>uni10400</key>
+      <string>u10400</string>
+      <key>uni10401</key>
+      <string>u10401</string>
+      <key>uni10402</key>
+      <string>u10402</string>
+      <key>uni10403</key>
+      <string>u10403</string>
+      <key>uni10404</key>
+      <string>u10404</string>
+      <key>uni10405</key>
+      <string>u10405</string>
+      <key>uni10406</key>
+      <string>u10406</string>
+      <key>uni10407</key>
+      <string>u10407</string>
+      <key>uni10408</key>
+      <string>u10408</string>
+      <key>uni10409</key>
+      <string>u10409</string>
+      <key>uni1040A</key>
+      <string>u1040A</string>
+      <key>uni1040B</key>
+      <string>u1040B</string>
+      <key>uni1040C</key>
+      <string>u1040C</string>
+      <key>uni1040D</key>
+      <string>u1040D</string>
+      <key>uni1040E</key>
+      <string>u1040E</string>
+      <key>uni1040F</key>
+      <string>u1040F</string>
+      <key>uni10410</key>
+      <string>u10410</string>
+      <key>uni10411</key>
+      <string>u10411</string>
+      <key>uni10412</key>
+      <string>u10412</string>
+      <key>uni10413</key>
+      <string>u10413</string>
+      <key>uni10414</key>
+      <string>u10414</string>
+      <key>uni10415</key>
+      <string>u10415</string>
+      <key>uni10416</key>
+      <string>u10416</string>
+      <key>uni10417</key>
+      <string>u10417</string>
+      <key>uni10418</key>
+      <string>u10418</string>
+      <key>uni10419</key>
+      <string>u10419</string>
+      <key>uni1041A</key>
+      <string>u1041A</string>
+      <key>uni1041B</key>
+      <string>u1041B</string>
+      <key>uni1041C</key>
+      <string>u1041C</string>
+      <key>uni1041D</key>
+      <string>u1041D</string>
+      <key>uni1041E</key>
+      <string>u1041E</string>
+      <key>uni1041F</key>
+      <string>u1041F</string>
+      <key>uni10420</key>
+      <string>u10420</string>
+      <key>uni10421</key>
+      <string>u10421</string>
+      <key>uni10422</key>
+      <string>u10422</string>
+      <key>uni10423</key>
+      <string>u10423</string>
+      <key>uni10424</key>
+      <string>u10424</string>
+      <key>uni10425</key>
+      <string>u10425</string>
+      <key>uni10426</key>
+      <string>u10426</string>
+      <key>uni10427</key>
+      <string>u10427</string>
+      <key>uni10428</key>
+      <string>u10428</string>
+      <key>uni10429</key>
+      <string>u10429</string>
+      <key>uni1042A</key>
+      <string>u1042A</string>
+      <key>uni1042B</key>
+      <string>u1042B</string>
+      <key>uni1042C</key>
+      <string>u1042C</string>
+      <key>uni1042D</key>
+      <string>u1042D</string>
+      <key>uni1042E</key>
+      <string>u1042E</string>
+      <key>uni1042F</key>
+      <string>u1042F</string>
+      <key>uni10430</key>
+      <string>u10430</string>
+      <key>uni10431</key>
+      <string>u10431</string>
+      <key>uni10432</key>
+      <string>u10432</string>
+      <key>uni10433</key>
+      <string>u10433</string>
+      <key>uni10434</key>
+      <string>u10434</string>
+      <key>uni10435</key>
+      <string>u10435</string>
+      <key>uni10436</key>
+      <string>u10436</string>
+      <key>uni10437</key>
+      <string>u10437</string>
+      <key>uni10438</key>
+      <string>u10438</string>
+      <key>uni10439</key>
+      <string>u10439</string>
+      <key>uni1043A</key>
+      <string>u1043A</string>
+      <key>uni1043B</key>
+      <string>u1043B</string>
+      <key>uni1043C</key>
+      <string>u1043C</string>
+      <key>uni1043D</key>
+      <string>u1043D</string>
+      <key>uni1043E</key>
+      <string>u1043E</string>
+      <key>uni1043F</key>
+      <string>u1043F</string>
+      <key>uni10440</key>
+      <string>u10440</string>
+      <key>uni10441</key>
+      <string>u10441</string>
+      <key>uni10442</key>
+      <string>u10442</string>
+      <key>uni10443</key>
+      <string>u10443</string>
+      <key>uni10444</key>
+      <string>u10444</string>
+      <key>uni10445</key>
+      <string>u10445</string>
+      <key>uni10446</key>
+      <string>u10446</string>
+      <key>uni10447</key>
+      <string>u10447</string>
+      <key>uni10448</key>
+      <string>u10448</string>
+      <key>uni10449</key>
+      <string>u10449</string>
+      <key>uni1044A</key>
+      <string>u1044A</string>
+      <key>uni1044B</key>
+      <string>u1044B</string>
+      <key>uni1044C</key>
+      <string>u1044C</string>
+      <key>uni1044D</key>
+      <string>u1044D</string>
+      <key>uni1044E</key>
+      <string>u1044E</string>
+      <key>uni1044F</key>
+      <string>u1044F</string>
+    </dict>
   </dict>
 </plist>
