--- a/sources/NotoSansDeseret-Regular.ufo/glyphs.public.background/contents.plist
+++ b/sources/NotoSansDeseret-Regular.ufo/glyphs.public.background/contents.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
-    <key>creator</key>
-    <string>com.schriftgestaltung.GlyphsUFOExport</string>
-    <key>formatVersion</key>
-    <integer>3</integer>
+    <key>uni1041A</key>
+    <string>uni1041A_.glif</string>
+    <key>uni10442</key>
+    <string>uni10442.glif</string>
   </dict>
 </plist>
